[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scripts/Battle.gd" type="Script" id=1]
[ext_resource path="res://Graphics/Maps/map.png" type="Texture" id=2]

[node name="Node" type="Node" index="0"]

script = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 2 )
expand = true

[node name="PCardUL" type="TextureButton" parent="." index="1"]

anchor_left = 0.5
anchor_top = 0.0
anchor_right = 0.5
anchor_bottom = 0.0
margin_left = -424.0
margin_top = 121.0
margin_right = -272.0
margin_bottom = 336.0
rect_rotation = 90.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
expand = true
_sections_unfolded = [ "Anchor", "Margin", "Rect" ]

[node name="PCardUR" type="TextureButton" parent="." index="2"]

anchor_left = 0.5
anchor_top = 0.0
anchor_right = 0.5
anchor_bottom = 0.0
margin_left = -103.0
margin_top = 122.0
margin_right = 50.0
margin_bottom = 332.0
rect_rotation = 90.4221
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
expand = true
_sections_unfolded = [ "Margin" ]

[node name="ECardUL" type="TextureButton" parent="." index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 1067.0
margin_top = 117.0
margin_right = 1283.0
margin_bottom = 273.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
expand = true
_sections_unfolded = [ "Focus", "Grow Direction", "Hint", "Mouse", "Rect", "Size Flags", "Visibility", "custom_constants", "custom_fonts", "custom_styles" ]

[node name="ECardUR" type="TextureButton" parent="." index="4"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 1385.0
margin_top = 120.0
margin_right = 1601.0
margin_bottom = 276.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
expand = true

[node name="PCardCL" type="TextureButton" parent="." index="5"]

anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -426.0
margin_top = -181.0
margin_right = -272.0
margin_bottom = 28.0
rect_rotation = 90.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
expand = true
_sections_unfolded = [ "Rect" ]

[node name="PCardCR" type="TextureButton" parent="." index="6"]

anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -107.0
margin_top = -181.0
margin_right = 51.0
margin_bottom = 28.0
rect_rotation = 90.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
expand = true
_sections_unfolded = [ "Rect" ]

[node name="ECardCL" type="TextureButton" parent="." index="7"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 1068.0
margin_top = 359.0
margin_right = 1284.0
margin_bottom = 515.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
expand = true

[node name="ECardCR" type="TextureButton" parent="." index="8"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 1389.0
margin_top = 359.0
margin_right = 1605.0
margin_bottom = 515.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
expand = true

[node name="PCardLL" type="TextureButton" parent="." index="9"]

anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -424.0
margin_top = 80.0
margin_right = -274.0
margin_bottom = 297.0
rect_rotation = 90.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
expand = true
_sections_unfolded = [ "Grow Direction", "Rect" ]

[node name="PCardLR" type="TextureButton" parent="." index="10"]

anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -104.0
margin_top = 77.0
margin_right = 55.0
margin_bottom = 291.0
rect_rotation = 90.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
expand = true
_sections_unfolded = [ "Rect" ]

[node name="ECardLL" type="TextureButton" parent="." index="11"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 1068.0
margin_top = 617.0
margin_right = 1284.0
margin_bottom = 773.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
expand = true

[node name="ECardLR" type="TextureButton" parent="." index="12"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 1384.0
margin_top = 616.0
margin_right = 1600.0
margin_bottom = 772.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
expand = true

[node name="End Turn" type="Button" parent="." index="13"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 881.0
margin_top = 877.0
margin_right = 1919.0
margin_bottom = 1050.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
flat = true
align = 1

[node name="Card 1" type="TextureButton" parent="." index="14"]

anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -76.0
margin_top = -338.0
margin_right = 84.0
margin_bottom = -89.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
expand = true
_sections_unfolded = [ "Focus", "Grow Direction", "Hint", "Margin", "Material", "Mouse", "Rect", "Textures", "Visibility" ]

[node name="Card 3" type="TextureButton" parent="." index="15"]

anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -257.0
margin_top = -303.0
margin_right = -97.0
margin_bottom = -53.0
rect_rotation = -6.13134
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
expand = true
_sections_unfolded = [ "Margin", "Textures" ]

[node name="Card 5" type="TextureButton" parent="." index="16"]

anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -419.0
margin_top = -245.0
margin_right = -259.0
margin_bottom = 4.0
rect_rotation = -13.9376
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
expand = true
_sections_unfolded = [ "Margin", "Textures" ]

[node name="Card 2" type="TextureButton" parent="." index="17"]

anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = 100.0
margin_top = -326.0
margin_right = 260.0
margin_bottom = -76.0
rect_rotation = 5.36341
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
expand = true
_sections_unfolded = [ "Margin", "Textures" ]

[node name="Card 4" type="TextureButton" parent="." index="18"]

anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = 257.0
margin_top = -284.0
margin_right = 417.0
margin_bottom = -35.0
rect_rotation = 12.0009
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
expand = true
_sections_unfolded = [ "Margin", "Textures" ]

[connection signal="pressed" from="PCardUL" to="." method="_on_PCardUL_pressed"]

[connection signal="pressed" from="PCardUR" to="." method="_on_PCardUR_pressed"]

[connection signal="pressed" from="PCardCL" to="." method="_on_PCardCL_pressed"]

[connection signal="pressed" from="PCardCR" to="." method="_on_PCardCR_pressed"]

[connection signal="pressed" from="PCardLL" to="." method="_on_PCardLL_pressed"]

[connection signal="pressed" from="PCardLR" to="." method="_on_PCardLR_pressed"]

[connection signal="pressed" from="End Turn" to="." method="_on_End_Turn_pressed"]

[connection signal="pressed" from="Card 1" to="." method="_on_Card_1_pressed"]

[connection signal="pressed" from="Card 3" to="." method="_on_Card_3_pressed"]

[connection signal="pressed" from="Card 5" to="." method="_on_Card_5_pressed"]

[connection signal="pressed" from="Card 2" to="." method="_on_Card_2_pressed"]

[connection signal="pressed" from="Card 4" to="." method="_on_Card_4_pressed"]


